# tfm-transformers

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: retrieval_benchmark_plan.md
examples/: breast_cancer_retrieval.py  embedding_gallery.py  umap_visualization.py  visualize_test_embeddings.py
src/tfm_embeddings/: __init__.py  embedder.py
src/tfm_embeddings/adapters/: __init__.py  base.py  tabfm.py  tabicl.py  tabpfn.py
tests/: test_api.py  test_oof.py  test_sklearn_compat.py  test_tabfm_adapter.py  test_tabicl_adapter.py  test_tabpfn_adapter.py
