[project]
name = "tfm-embeddings"
version = "0.1.0"
description = "Sentence-transformers-style embeddings for tabular foundation models (TabICL, TabPFN, ...)"
readme = "README.md"
authors = [{ name = "Viktor Stenby Johansson" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["tabular data", "foundation model", "embeddings", "similarity search", "TabICL", "TabPFN"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
tabicl = ["tabicl>=2.1"]
tabpfn = ["tabpfn>=2.0"]
tabfm = ["tabfm[pytorch]>=1.0.0; python_version >= '3.11'"]
all = ["tfm-embeddings[tabicl,tabpfn,tabfm]"]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/vstenby/tfm-embeddings"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tfm_embeddings"]
